websocket/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    app: chat
spec:
  ports:
  - port: 8080
  selector:
    app: chat
